# trading-sim

./: .gitignore  GUIDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
desktop/: CMakeLists.txt  feed_client.cpp  feed_client.h  main.cpp
desktop/qml/: DepthView.qml  Main.qml  TradesRibbon.qml
engine/: CMakeLists.txt  build_sim_runner
engine/apps/: CMakeLists.txt  sim_runner.cpp
engine/benchmarks/: CMakeLists.txt  bench_order_book.cpp
engine/include/engine/: flow_generator.hpp  order.hpp  order_book.hpp
engine/src/: flow_generator.cpp  order_book.cpp
engine/tests/: CMakeLists.txt  test_flow_generator.cpp  test_order_book.cpp
gateway/: .eslintrc.cjs  _e2e_probe.mjs  package-lock.json  package.json  tsconfig.json
gateway/src/: engine_process.ts  hub.ts  index.ts  metrics.ts  types.ts
gateway/tests/: engine_process.test.ts  hub.test.ts  metrics.test.ts  types.test.ts
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
web/src/: App.js  App.tsx  Candlestick.tsx  DepthChart.js  DepthChart.tsx  Help.tsx  IntervalPicker.tsx  MyOrders.tsx  OrderEntry.tsx  Pnl.tsx  StatsPanel.js  StatsPanel.tsx  main.js  main.tsx  pnlReducer.ts  styles.css  types.ts  useEngineFeed.js  useEngineFeed.ts
web/src/__tests__/: DepthChart.test.js  DepthChart.test.tsx  StatsPanel.test.js  StatsPanel.test.tsx  pnlReducer.test.ts  useEngineFeed.test.js  useEngineFeed.test.tsx
